Update CRUD pages and SeedData

--- a/Web_courses/Pages/Courses/Details.cshtml
+++ b/Web_courses/Pages/Courses/Details.cshtml
@@ -41,6 +41,19 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Course.coursesCategory)
         </dd>
+            <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.reviews)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.reviews)
+        </dd>
+        </dd>
+            <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.ratings)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.ratings)
+        </dd>
     </dl>
 </div>
 <div>
