--- a/Web_courses/Pages/Courses/Delete.cshtml
+++ b/Web_courses/Pages/Courses/Delete.cshtml
@@ -42,8 +42,21 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Course.coursesCategory)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.ratings)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.ratings)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.reviews)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.reviews)
+        </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Course.CourseID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
