Changes some name of properties

--- a/Web_courses/Pages/Courses/Index.cshtml
+++ b/Web_courses/Pages/Courses/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.Course[0].coursesCategory)
             </th>
             <th>
-                @Html.DisplayNameFor(model =>model.Course[0].ratings)
+                @Html.DisplayNameFor(model =>model.Course[0].Ratings)
             </th>
             <th>
                 @Html.DisplayNameFor(model =>model.Course[0].reviews)
@@ -58,7 +58,7 @@
                     @Html.DisplayFor(modelItem => item.coursesCategory)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem =>item.ratings )
+                    @Html.DisplayFor(modelItem =>item.Ratings )
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem =>item.reviews)
