--- a/Web_courses/Pages/Courses/Create.cshtml
+++ b/Web_courses/Pages/Courses/Create.cshtml
@@ -39,9 +39,9 @@
                 <span asp-validation-for="Course.coursesCategory" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.ratings" class="control-label"></label>
-                <input asp-for="Course.ratings" class="form-control" />
-                <span asp-validation-for="Course.ratings" class="text-danger"></span>
+                <label asp-for="Course.Ratings" class="control-label"></label>
+                <input asp-for="Course.Ratings" class="form-control" />
+                <span asp-validation-for="Course.Ratings" class="text-danger"></span>
             </div>
              <div class="form-group">
                 <label asp-for="Course.reviews" class="control-label"></label>
