--- a/Web_courses/Pages/Courses/Delete.cshtml
+++ b/Web_courses/Pages/Courses/Delete.cshtml
@@ -44,10 +44,10 @@
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Course.ratings)
+            @Html.DisplayNameFor(model => model.Course.Ratings)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Course.ratings)
+            @Html.DisplayFor(model => model.Course.Ratings)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Course.reviews)
