--- a/Web_courses/Pages/Index.razor
+++ b/Web_courses/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h2>Welcome to</h2>
+<h1>Web Courses</h1>
+<h2>Gursimra Singh Assi</h2>
+<p>@DateTime.Now</p>
