Counter Page update

--- a/Web_courses/Pages/Counter.razor
+++ b/Web_courses/Pages/Counter.razor
@@ -9,8 +9,14 @@
 @code {
     private int currentCount = 0;
 
+
     private void IncrementCount()
     {
-        currentCount++;
+        currentCount+=2;
+    if(currentCount>15)
+    {
+        currentCount=0;
     }
+    }
+    
 }
