--- a/Web_courses/Pages/Index.razor
+++ b/Web_courses/Pages/Index.razor
@@ -2,5 +2,7 @@
 
 <h2>Welcome to</h2>
 <h1>Web Courses</h1>
-<h2>Gursimra Singh Assi</h2>
+<h2>Gursimran Singh Assi</h2>
 <p>@DateTime.Now</p>
+
+<Counter></Counter>
