--- a/Web_courses/Pages/Web_Courses.razor
+++ b/Web_courses/Pages/Web_Courses.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Web_Courses"
 <h3>Web_Courses</h3>
 
-<input type="number" name="courseShow" @bind-value="limit" @oninput="(ChangeEventArgs e) => { if (int.TryParse(e.Value.ToString(), out int value) && value >= 0 && value <= 5) { limit = value; StateHasChanged(); } }">
+<input type="number" name="courseShow" min="0" max="5"@bind-value="limit" @oninput="(ChangeEventArgs e) => { if (int.TryParse(e.Value.ToString(), out int value) && value >= 0 && value <= 5) { limit = value; StateHasChanged(); } }">
 <button class="btn btn-primary" @onclick="showCourses">Click me to see Web_Courses</button>
 
 <ul>
