--- a/AssiGursimranChat/Client/Pages/ChatPage.razor
+++ b/AssiGursimranChat/Client/Pages/ChatPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/chat"
-<h3>ChatPage</h3>
 
-@code {
+<h1>Hello, world!</h1>
 
-}
+Welcome to your new app.
+
+<SurveyPrompt Title="How is Blazor working for you?" />
