--- a/AssiGursimranChat/Client/Pages/Index.razor
+++ b/AssiGursimranChat/Client/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h2>@name</h2>
+<a href="chat">Chat Link</a>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code{
+    private string name="Gurimran Singh Assi";
+}
