--- a/AssiGursimranChat/Client/Pages/Index.razor
+++ b/AssiGursimranChat/Client/Pages/Index.razor
@@ -1,21 +1,21 @@
 ﻿@page "/"
-
-<h2>@name</h2>
-<a href="chat">Chat Link</a>
 @using Microsoft.AspNetCore.SignalR.Client
 @inject NavigationManager NavigationManager
 @implements IAsyncDisposable
 
+<h2>@name</h2>
+<a href="chat">Chat Link</a>
+
 <div class="form-group">
     <label>
-        User:
-        <input @bind="userInput" />
+        Username:
+        <input @bind="userInput" maxlength="63" disabled="@(!IsConnected)"/>
     </label>
 </div>
 <div class="form-group">
     <label>
         Message:
-        <input @bind="messageInput" size="50" />
+        <input @bind="messageInput" size="50" disabled="@(!IsConnected)" />
     </label>
 </div>
 <button @onclick="Send" disabled="@(!IsConnected)">Send</button>
@@ -48,6 +48,7 @@
             messages.Add(encodedMsg);
             StateHasChanged();
         });
+        
 
         await hubConnection.StartAsync();
     }
