--- a/AssiGursimranChat/Client/Pages/Index.razor
+++ b/AssiGursimranChat/Client/Pages/Index.razor
@@ -1,69 +1,8 @@
 ﻿@page "/"
-@using Microsoft.AspNetCore.SignalR.Client
-@inject NavigationManager NavigationManager
-@implements IAsyncDisposable
+
 
 <h2>@name</h2>
 <a href="chat">Chat Link</a>
-
-<div class="form-group">
-    <label>
-        Username:
-        <input @bind="userInput" maxlength="63" disabled="@(!IsConnected)"/>
-    </label>
-</div>
-<div class="form-group">
-    <label>
-        Message:
-        <input @bind="messageInput" size="50" disabled="@(!IsConnected)" />
-    </label>
-</div>
-<button @onclick="Send" disabled="@(!IsConnected)">Send</button>
-
-<hr>
-
-<ul id="messagesList">
-    @foreach (var message in messages)
-    {
-        <li>@message</li>
-    }
-</ul>
-
-@code {
-    private string name = "Gurimran Singh Assi";
-    private HubConnection hubConnection;
-    private List<string> messages = new List<string>();
-    private string userInput;
-    private string messageInput;
-
-    protected override async Task OnInitializedAsync()
-    {
-        hubConnection = new HubConnectionBuilder()
-        .WithUrl(NavigationManager.ToAbsoluteUri("/chathub"))
-        .Build();
-
-        hubConnection.On<string, string>("ReceiveMessage", (user, message) =>
-        {
-            var encodedMsg = $"{user}: {message}";
-            messages.Add(encodedMsg);
-            StateHasChanged();
-        });
-        
-
-        await hubConnection.StartAsync();
-    }
-
-    async Task Send() =>
-    await hubConnection.SendAsync("SendMessage", userInput, messageInput);
-
-    public bool IsConnected =>
-    hubConnection.State == HubConnectionState.Connected;
-
-    public async ValueTask DisposeAsync()
-    {
-        if (hubConnection is not null)
-        {
-            await hubConnection.DisposeAsync();
-        }
-    }
+@code{
+    private string name ="Gurismran Singh Assi";
 }
